renders login page and configures passport js file

--- a/bookstorepug/views/signup.pug
+++ b/bookstorepug/views/signup.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Sign up for the bookstore
-  form(method='post')
+  form(method='post').user
     label Email: 
       input(type='text' name='email')
     label Password: 
