--- a/bookstorepug/views/login.pug
+++ b/bookstorepug/views/login.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Log into the bookstore
-  form(method='post')
+  form(method='post').user
     label Email: 
       input(type='text' name='email')
     label Password: 
