create queries for user object in database

--- a/bookstorepug/views/login.pug
+++ b/bookstorepug/views/login.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Log into the bookstore
-  form(method='post').user
+  form(method='post').user.login
     label Email: 
       input(type='text' name='email')
     label Password: 
