--- a/bookstorepug/views/createbook.pug
+++ b/bookstorepug/views/createbook.pug
@@ -23,7 +23,7 @@ block content
         h1 Book Cover URL:
         input(type='text' name='image_url' placeholder='image_url')
       .inputSubmit
-        button(type='Submit' formmethod='POST' value='Submit')
+        button(type='Submit' formmethod='POST' value='Submit').saveButton
           | Save 
         a(href='/')
           i.create.fa.fa-window-close(aria-hidden="true")
