--- a/bookstorepug/views/signup.pug
+++ b/bookstorepug/views/signup.pug
@@ -1,10 +1,13 @@
 extends layout
 
 block content
-  h1 Sign up for the bookstore
-  form(method='post').user.signup
-    label Email: 
-      input(type='text' name='email')
-    label Password: 
-      input(type='text' name='password')
-    button(type='submit' value='Submit')
+  .signupWrapper
+    .signupContainer
+      h1 Sign up for the bookstore
+      form(method='post').user.signup
+        label Email: 
+          input(type='text' name='email')
+        label Password: 
+          input(type='text' name='password')
+        button(type='submit' value='Submit')
+          | Sign up
